bug fix, added no wrap so that the navbar opens smoothly. changed the white space to no wrap to allow for a seamless transition

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,6 +60,7 @@ body {
 }
 
 .navbar-item {
+  white-space: nowrap;
   display: flex;
   align-items: center;
   padding: 15px;
